# naxgcc-fw

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix
.changelogs/: v1.0.0.md  v1.1.0.md  v1.1.1.md  v1.2.0.md  v1.3.0.md
.forgejo/workflows/: clippy-check.yml  nightly-release.yml  stable-release.yml
.gitea/workflows/: nightly-release.yml
.github/workflows/: no-pr.yml
src/: calibrate.rs  config.rs  filter.rs  flash_mem.rs  gcc_hid.rs  helpers.rs  input.rs  input_filter.rs  main.rs  packed_float.rs  stick.rs  usb_comms.rs
src/hid/: gcc.rs  mod.rs  procon.rs  xinput.rs
